--- a/static/app/contactManagement/profileQuestionnaireLineDetailMaintenance.html
+++ b/static/app/contactManagement/profileQuestionnaireLineDetailMaintenance.html
@@ -44,9 +44,9 @@
                     <select class="form-control col-xs-4" id="ContactClassField" name="ContactClassField" ng-model="ProfileQuestionnaireLine.ContactClassField" ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineContactClassFieldTypes" ng-disabled="disableContactClassField()"
                     />
                 </div>
-                <div class="col-xs-1" style="padding-left:0px">
+                <!-- <div class="col-xs-1" style="padding-left:0px">
                     <button type="button" class="btn btn-default btn-sm" ng-disabled="ProfileQuestionnaireLine.ContactClassField != Constants.ProfileQuestionaireLineContactClassFieldTypes[5].Code" ng-click="showRatingPoints()">Points</button>
-                </div>
+                </div> -->
             </div>
             <div class="form-group has-feedback">
                 <label class="control-label col-xs-4" for="StartingDateFormula">Starting Date Formula</label>
@@ -77,6 +77,7 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok(ProfileQuestionnaireLineDetailMaintenanceForm)">OK</button>
+    <button class="btn btn-primary" type="button" ng-click="ok(ProfileQuestionnaireLineDetailMaintenanceForm, true)" ng-if="ProfileQuestionnaireLine.ContactClassField == Constants.ProfileQuestionaireLineContactClassFieldTypes[5].Code">OK & Show Ratings</button>
+    <button class="btn btn-primary" type="button" ng-click="ok(ProfileQuestionnaireLineDetailMaintenanceForm, false)">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
 </div>
