--- a/static/app/contactManagement/ratingsMaintenance.html
+++ b/static/app/contactManagement/ratingsMaintenance.html
@@ -2,15 +2,26 @@
     <h3 class="modal-title" id="modal-title">Rating Points</h3>
 </div>
 <div class="modal-body" id="modal-body" ng-init="initializeController()">
-    <!-- class ui-front use for autocomplete dropdown -->
-    <div class="container-fluid form-horizontal ui-front">
-        <div class="form-group">
-            <div class="col-xs-6">
-                <input type="text" class="form-control" name="ProfileQuestionnaireHeader" id="ProfileQuestionnaireHeader" capitalize ui-autocomplete="profile_questionnaire_header" autocomplete-id="ProfileQuestionnaireHeaderID" ng-model="ProfileQuestionnaireHeaderCode"
-                />
+    <div class="container-fluid ui-front row">
+        <div class="col-xs-4">
+            <div class="form-grid">
+                <div class="grid-heading-row">
+                    <div class="grid-row">
+                        <div class="data-row row">
+                            <div class="col grid-static-col ellipsis">Profile Questionnaire</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-body">
+                    <div class="list-group">
+                        <a class="list-group-item ellipsis" ng-repeat="profileQuestionnaire in ProfileQuestionnaires" id="ProfileQuestionnaire_{{profileQuestionnaire.ID}}" ng-click="selectProfileQuestionnaire(profileQuestionnaire.ID)">
+                            {{profileQuestionnaire.Code}} - {{profileQuestionnaire.Description}}
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="form-group">
+        <div class="col-xs-8">
             <div class="form-grid">
                 <div class="grid-heading-row">
                     <div class="grid-row">
