--- a/static/app/contactManagement/ratingsMaintenance.html
+++ b/static/app/contactManagement/ratingsMaintenance.html
@@ -65,7 +65,7 @@
                                     </div>
                                     <div class="col grid-static-col col-xs-2">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" name="Point[]" id="Point_{{$index + 1}}" ng-model="profileQuestionnaireLine.Point" />
+                                            <input type="text" class="form-control" name="Points[]" id="Points_{{$index + 1}}" ng-model="profileQuestionnaireLine.Points" />
                                         </div>
                                     </div>
                                 </div>
